# 003-streamlit-split-and-summarize_all_data_type-v1

./: main.py  pyproject.toml
