[tool.poetry]
name = "003-streamlit-split-and-summarize"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "^1.37.0"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
pdfplumber = "^0.11.0"
pytesseract = "^0.3.10"
Pillow = "^10.0.0"
chardet = "^5.2.0"
python-magic = "*"
numpy = { version = "1.26.4", extras = [], markers = "platform_system != 'Windows' or python_version >= '3.9'" }
python-docx = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

